1998-09-19  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd-server.h, esd.c, mix.c, players.c: started the 8 bit server 
	overhaul.  many off by *2,/2 errors remain.  still straightening out 
	buf_size_samples vs. buf_size_octets issues... 16bit seems to work.

1998-09-05  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd.c, mix.c, esd-server.h: fixed the annoying buzz while monitoring

1998-08-28  Yo Ric Dude  <ericmit@ix.netcom.com>

	* audio_alsa.c: Nick Lopez - added the missing audio_alsa.c

1998-08-09  Yo Ric Dude  <ericmit@ix.netcom.com>

	* audio_irix.c: Kimball Thurston - corrections for irix.

	* audio_hpux.c: Dave Glowacki - corrections for hpux and {esdcat,rec,mon}

	* Makefile.am, acconfig.h, audio.c, configure.in: Nick Lopez - added
	support for the Advanced Linux Sound Architecture. It seems to work 
	just fine on my SB16 with ALSA driver 0.1.4 and lib 0.0.9.
	still needs audio_alsa.c.
	
	* AUTHORS: updated list of contributors

	* Makefile.am, acconfig.h, audio.c, configure.in, esd-server.h:
	Jeff Dubrule - updated for MkLinux (still need to merge in mix.c)

1998-08-08  Mandrake <mandrake@mandrake.net>
	* fixed Makefile.am to use libtool's versioning correctly :)

1998-08-07  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esdlib.c: switched to memcpy instead of bcopy.
	* audio_solaris.c: added a few more recognized devices.
		thx to Tynian and Peter Asobeck for Solaris devices.
	* audio_oss.c: powerpc patches courtesy of mackman.
	* esdcat.c: forgot to check the FILE* returned from open, thx vendu.
	
1998-07-16  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd-server.h, proto.c, samples.c:
	everything but recording works for irix. irix->linux connectivity
	and back works ok, except for remote recording.  keeping track
	of client states seems to be uglier than it needs to be. not so
	mental note to look into that. 

1998-07-15  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd-server.h, proto.c, samples.c, test-script: