@@ -162,6 +162,9 @@ void esd_audio_flush();
 /* default port for the EsounD server */
 #define ESD_DEFAULT_PORT (5001)
 
+/* default sample rate for the EsounD server */
+#define ESD_DEFAULT_RATE (44100)
+
 /* maximum length of a stream/sample name */
 #define ESD_NAME_MAX (128)
 
