@@ -16,7 +16,7 @@ void clean_exit(int signum) {
 int main(int argc, char **argv)
 {
     char buf[ESD_BUF_SIZE];
-    int sock = -1, rate = 44100;
+    int sock = -1, rate = ESD_DEFAULT_RATE;
     int arg = 0, length = 0, total = 0;
 
     int bits = ESD_BITS16, channels = ESD_STEREO;
